attempt to fix EnvTests